    from Red Hat to create the patch).

  [ Martin Pitt ]
  * debian/control: Drop perl-modules dependency. The only script that uses
    perl is oopstops, which uses IO::Handle, and this is in perl-base.
  * debian/control, debian/rules, ubuntu-*.dpatch: Replace lsb_release call
    with dpkg-vendor, and drop lsb-release build dependency.

 -- Till Kamppeter <till.kamppeter@gmail.com>  Thu,  2 Sep 2010 20:03:33 +0200

cups (1.4.4-3) unstable; urgency=low

  [ Jamie Strandboge ]
  * debian/cups.post{inst,rm}: update for local include file
  * debian/local/apparmor-profile: add local include file

  [ Martin Pitt ]
  * debian/rules: Stop building with --enable-threads, since currenu GnuTLS
    does not work with threads. This brings back the lost SSL/TLS support.
    (Closes: #588234, #591509)
  * debian/libcups2.symbols: Readd _http{Read,Write}GNUTLS@Base symbols to
    ensure that autogenerated shlibs dependencies for libcups get tight
    enough.
  * manpage-translations.dpatch: Update German manpage translations, thanks
    Helge Kreutzmann! (Closes: #588028)
  * debian/rules: Set DPKG_GENSYMBOLS_CHECK_LEVEL to 4 to point out outdated
    .symbols files more strongly.
  * debian/libcups2.symbols, debian/libcupsimage2.symbols: Subsume private
    optional symbols into regexps.

 -- Martin Pitt <mpitt@debian.org>  Wed, 11 Aug 2010 19:03:01 +0200

cups (1.4.4-2) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/local/filters/pdf-filters/filter/fontembed/bitset.h,
    debian/local/filters/pdf-filters/filter/fontembed/sfnt.c,
    debian/local/filters/pdf-filters/filter/texttopdf.c: Fixed bug with
    subsetting certain composite chars (LP: #605479).
  * debian/local/acroread.conf, debian/local/pdftops.conf, debian/cups.install:
    Removed /etc/cups/acroread.conf and /etc/cups/pdftops.conf. These two files
    were used by the alternative pdftops filter from Helge Blischke. As we
    switched back to the original pdftops filter these files are not needed any