@@ -28,6 +28,24 @@ mv_conffile() {
   fi
 }
 
+# Remove a no-longer used conffile (from http://wiki.debian.org/DpkgConffileHandling)
+rm_conffile() {
+        PKGNAME="$1"
+        CONFFILE="$2"
+        if [ -e "$CONFFILE" ]; then
+                md5sum="`md5sum \"$CONFFILE\" | sed -e \"s/ .*//\"`"
+                old_md5sum="`dpkg-query -W -f='${Conffiles}' $PKGNAME | sed -n -e \"\\\\'^ $CONFFILE[[:space:]]'{s/ obsolete$//;s/.* //p}\"`"
+                if [ "$md5sum" != "$old_md5sum" ]; then
+                        echo "Obsolete conffile $CONFFILE has been modified by you."
+                        echo "Saving as $CONFFILE.dpkg-bak ..."
+                        mv -f "$CONFFILE" "$CONFFILE".dpkg-bak
+                else
+                        echo "Removing obsolete conffile $CONFFILE ..."
+                        rm -f "$CONFFILE"
+                fi
+        fi
+}
+
 case "$1" in
     install|upgrade)
 	if [ -e /var/lib/cups/ppd -a ! -L /var/lib/cups/ppd -a ! -e /etc/cups/ppd ]; then
@@ -80,6 +98,12 @@ case "$1" in
 	# remove it again (now USB backend works with both)
 	if dpkg --compare-versions "$2" lt-nl '1.4.1-4'; then
 	    rm -f /etc/modprobe.d/blacklist-cups.conf
+	fi
+
+        # On Ubuntu, replace the obsolete init script (replaced by an upstart job)
+	if dpkg-vendor --is ubuntu && [ ! -L /etc/init.d/cups ] && dpkg --compare-versions "$2" le-nl "1.4.4-4"; then
+	    rm_conffile cups /etc/init.d/cups
+	    update-rc.d cups remove
 	fi
     ;;
 
